# CV-Quixer

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  main.py  pyproject.toml
configs/: classical_vit.yaml  cv_quixer.yaml  defaults.yaml
configs/ablations/: quixer_fewer_modes.yaml  quixer_gaussian_backend.yaml
cv_quixer/: provenance.py
experiments/: _orchestration.py  _run_selection.py  backfill_artefacts.py  build_coeff_ablation.py  build_pe_ablation.py  build_polydeg_ablation.py  compare_models.py  demo_hybrid.py  eval_cutoff_sweep.py  eval_cutoff_sweep_all.py  full_experiment.py  migrate_add_cvqnn_field.py  mini_experiment.py  report_cutoff_sweep.py  report_diagnostics.py  report_sweep.py  report_sweep_compare.py  rerun_sweep.py  resume_sweep.py  select_extension_runs.py  smoke_test.py  sweep.py  train_classical.py  train_quantum.py
scripts/: .pull_config.example  debug_imports.py  pull_results.sh  run_backfill_artefacts.sh  run_eval_cutoff_sweep.sh  run_eval_cutoff_sweep_array.sh  run_full_experiment.sh  run_mini_experiment.sh  run_report_array.sh  run_report_crossrun.sh  run_sweep.sh  setup_cuda_env.sh  submit_chunked.sh  submit_report.sh  triage_cuda.sh
slurm_logs/: .gitkeep
tests/: conftest.py  test_build_coeff_ablation.py  test_build_pe_ablation.py  test_classical_vit.py  test_coeff_ablation.py  test_cv_quixer.py  test_cvqnn_block.py  test_data.py  test_debug_nan.py  test_debug_oom.py  test_epoch_artefacts.py  test_gate_gradients.py  test_metrics.py  test_observable_presets.py  test_observables.py  test_orchestration.py  test_poly_init_noise.py  test_positional_encoding.py  test_provenance.py  test_quantum_engine.py  test_report_sweep.py  test_resume_sweep.py  test_run_selection.py  test_stacked_quixer.py  test_success_prob_lambda.py
(+48 files in other folders)
